--- a/app/views/recipes/_instruction_fields.html.erb
+++ b/app/views/recipes/_instruction_fields.html.erb
@@ -4,7 +4,7 @@
   <%= f.text_field :description, class: "form-control" %>
   <div class="text-right">
     <%= link_to_remove_association f do %>
-      <span class="glyphicon glyphicon-remove"></span>remove
+      <span class="closebtn">&times;</span> remove
     <% end %>
   </div>
 </div>
