--- a/app/views/recipes/_recipe_ingredient_fields.html.erb
+++ b/app/views/recipes/_recipe_ingredient_fields.html.erb
@@ -27,7 +27,8 @@
     </div>
   </div>
   <div class="text-right">
-    <%= link_to_remove_association "remove", f %>
+    <%= link_to_remove_association f do %>
+      <span class="closebtn">&times;</span> remove
+    <% end %>
   </div>
-  
 </div>
