--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,14 +9,14 @@
     <a class="navbar-brand" href="/">Kitchen&Recipes</a>
 
     <ul class="navbar-nav mr-auto">
-      <!-- current_user home -->
+      <!-- home -->
       <li class="nav-item active">
         <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
       </li>
       <!-- Browse category by type -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Browse
+          Browse »
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item">Meal Type</a>
