--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -55,9 +55,9 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Favorites</a>
           <a class="dropdown-item" href="#">Reviews</a>
-          <a class="dropdown-item" href="#">Recipes</a>
+          <a class="dropdown-item" href="<%= user_recipes_path(current_user) %>">My  Recipes</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Add a Recipe</a>
+          <a class="dropdown-item" href="<%= new_user_recipe_path(current_user) %>">Add a Recipe</a>
           <div class="dropdown-divider"></div>
           <div class="dropdown-item">
             <%= link_to "Logout", destroy_user_session_path, method: :delete %>
