--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,8 +1,6 @@
 <!-- /recipes/edit -->
 
-<div class="jumbotron">
-  <h1 class="text-center display-4">Edit recipe</h1>
-  <hr>
-</div>
 
-<%= render partial: 'form', locals: { recipe: @recipe, categories: @categories, ingredients: @ingredients, measurements: @measurements } %>
+<%= render partial: 'shared/jumbotron', locals: { title: "Edit recipe" } %>
+
+<%= render partial: 'form', locals: { user: current_user, recipe: @recipe, categories: @categories, ingredients: @ingredients, measurements: @measurements } %>
