--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render partial: 'shared/jumbotron', locals: { title: "Add a new recipe" } %>
 
-<%= render partial: 'form', locals: { recipe: @recipe, categories: @categories, ingredients: @ingredients, measurements: @measurements } %>
+<%= render partial: 'form', locals: { user: current_user, recipe: @recipe, categories: @categories, ingredients: @ingredients, measurements: @measurements } %>
