--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -27,7 +27,7 @@
 
   <div class="text-center">
     <% if current_user == @recipe.user %>
-      <%= link_to "Edit Recipe", edit_recipe_path(@recipe), class: 'btn btn-primary' %>
+      <%= link_to "Edit Recipe", edit_user_recipe_path(current_user, @recipe), class: 'btn btn-primary' %>
       <%= link_to "Delete Recipe", @recipe, method: :delete, data: { confirm: "Are you sure you want to delete this recipe?" }, class: 'btn btn-danger' %>
     <% end %>
   </div>
