Add browse by categories and fix recipe listing by public and user

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,7 @@
 <!-- /recipes/index -->
 
+<%= render partial: 'shared/jumbotron', locals: { title: "Recipe Index" } %>
+
 <div class="container-fluids">
   <!-- Card columns -->
   <div class="card-columns">
