--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <a class="navbar-brand" href="/">Kitchen&Recipes</a>
+    <a class="navbar-brand" href="<%= recipes_path %>">Kitchen&Recipes</a>
 
     <ul class="navbar-nav mr-auto">
       <!-- home -->
@@ -16,7 +16,7 @@
       <!-- Browse category by type -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Browse »
+          Browse
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item">Meal Type</a>
