Rename category images and add seed data

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,7 +4,7 @@
   <div class="text-center">
     <h1><%= @recipe.name %></h1>
     <%= image_tag @recipe.image.variant(combine_options: { resize: "400x300", extent: "400x300", background: "grey", gravity: "center"}) %>
-    <p class="card-text"><small class="text-muted">by <%= link_to @recipe.user.name.titleize, user_path(@recipe.user) %></br>category: <%= link_to @recipe.categories[0].name.titleize, category_path(@recipe.categories[0]) %></small></p>
+    <p class="card-text"><small class="text-muted">by <%= link_to @recipe.user.name.titleize, user_path(@recipe.user) %></br>category <%= link_to @recipe.categories[0].name.titleize, category_path(@recipe.categories[0]) %></small></p>
     <hr>
     <p><%= @recipe.description %></p>
   </div>
@@ -24,7 +24,7 @@
   <!-- display in ascending id order -->
   <h5>Instructions:</h5>
   <% @instructions.reverse_each.with_index do |instruction, i| %>
-    <p> <%= i+1 %> <%= instruction.description %></p>
+    <p> <%= i+1 %>. <%= instruction.description %></p>
   <% end %>
 
   <div class="text-center">
