--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,11 +4,11 @@
 
 <div class="container-fluids">
   <div class="row mt-5 justify-content-center">
-    <% @categories.each.with_index do |category, i| %>
+    <% @categories.each do |category| %>
       <!-- Card -->
       <div class="card mx-2 mb-3" style="max-width: 256px">
         <!--Card image-->
-        <%= link_to image_tag("categories#{i}.jpeg", class: "card-img-top"), category_path(category) %>
+        <%= link_to image_tag("#{category.slug}.jpeg", class: "card-img-top"), category_path(category) %>
         <!--Card body -->
         <div class="card-body">
           <h4 class="card-title"><%= link_to category.name.titleize, category_path(category) %></h4>
