--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,11 +2,11 @@
 
 <div class="text-center">
   <h1 class="display-4"><%= @category.name.titleize %></h1>
-  <%#= image_tag @user.avatar.variant(combine_options: { resize: "300x200", extent: "300x200", background: "grey", gravity: "center"}) %>
   <hr>
 </div>
 
 <div class="container-fluids">
+  <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipes.count, 'Recipe') %></small></p>
   <!-- Card columns -->
   <div class="card-columns">
     <%= render partial: 'recipes/recipe', collection: @recipes %>
