--- a/app/views/recipes/search.html.erb
+++ b/app/views/recipes/search.html.erb
@@ -1,8 +1,9 @@
-<!-- /recipes/index -->
+<!-- /recipes/search -->
 
-<%= render partial: 'shared/jumbotron', locals: { title: "Recipes found: " + @recipes.count.to_s } %>
+<%= render partial: 'shared/jumbotron', locals: { title: "#{@recipe_name} Recipes" } %>
 
 <div class="container-fluids">
+  <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipes.count, 'Recipe') %></small></p>
   <!-- Card columns -->
   <div class="card-columns">
     <%= render partial: 'recipe', collection: @recipes %>
