--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -4,6 +4,7 @@
 
 
 <div class="container-fluids">
+  <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipes.count, 'Recipe') %></small></p>
   <!-- Card columns -->
   <div class="card-columns">
     <%= render partial: 'recipes/recipe', collection: @recipes %>
