--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -3,16 +3,12 @@
 <!-- Card -->
 <div class="card">
   <!--Card image-->
-  <% if current_user == recipe.user %>
-    <%= link_to image_tag(recipe.image, class: "card-img-top"), user_recipe_path(current_user, recipe) %>
-  <% else %>
-    <%= link_to image_tag(recipe.image, class: "card-img-top"), recipe_path(recipe) %>
-  <% end %>
+  <%= link_to_image_tag(recipe) %>
 
   <!--Card body -->
   <div class="card-body">
     <p class="card-text"><small class="text-muted">by <%= link_to recipe.user.name.titleize, user_path(recipe.user) %></small></p>
-    <h4 class="card-title"><%= recipe.name.titleize %></h4>
+    <h4 class="card-title"><%= link_to_recipe_name(recipe) %></h4>
     <p class="card-text"><%= recipe.description %></p>
   </div> <!-- Card body -->
 </div> <!-- Card -->
