--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -28,11 +28,6 @@
   <% end %>
 
   <div class="text-center">
-    <% if current_user == @recipe.user %>
-      <%= link_to "Edit Recipe", edit_user_recipe_path(current_user, @recipe), class: 'btn btn-primary' %>
-      <%= link_to "Delete Recipe", @recipe, method: :delete, data: { confirm: "Are you sure you want to delete this recipe?" }, class: 'btn btn-danger' %>
-    <% elsif current_user %>
-      <%= link_to "Clone Recipe", recipe_copy_path(@recipe), method: :post, data: { confirm: "Are you sure you want to clone this recipe?" }, class: 'btn btn-primary' %>
-    <% end %>
+    <%= link_to_recipe_actions(@recipe) %>
   </div>
 </div> <!-- Container -->
