Add form validations and amend model validations

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,6 +2,7 @@
 
 <div class="text-center">
   <h1 class="display-4"><%= @category.name.titleize %></h1>
+    <%= image_tag("#{@category.slug}.jpeg", height: '156', width: '182') %>
   <hr>
 </div>
 
