--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -59,9 +59,9 @@
           <a class="dropdown-item" href="<%= user_path(current_user) %>">My Dashboard</a>
           <div class="dropdown-divider"></div>
           <!-- <a class="dropdown-item" href="#">Favorites</a>
-          <a class="dropdown-item" href="#">Reviews</a> -->
+          <a class="dropdown-item" href="#">Reviews</a>
           <a class="dropdown-item" href="<%= user_recipes_path(current_user) %>">My Recipes</a>
-          <div class="dropdown-divider"></div>
+          <div class="dropdown-divider"></div> -->
           <a class="dropdown-item" href="<%= new_user_recipe_path(current_user) %>">Add a Recipe</a>
           <div class="dropdown-divider"></div>
           <div class="dropdown-item">
