--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,12 +6,12 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <a class="navbar-brand" href="<%= recipes_path %>">Kitchen&Recipes</a>
+    <a class="navbar-brand" href="/">Kitchen&Recipes</a>
 
     <ul class="navbar-nav mr-auto">
       <!-- home -->
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="<%= recipes_path %>">Home<span class="sr-only">(current)</span></a>
       </li>
       <!-- Browse category by type -->
       <li class="nav-item dropdown">
@@ -19,13 +19,11 @@
           Browse
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item">Meal Type</a>
+          <a class="dropdown-item" href="<%= categories_path %>">All Categories</a>
           <div class="dropdown-divider"></div>
             <% Category.by_meal_type.each do |category| %>
               <a class="dropdown-item" href="<%= category_path(category) %>"><%= category.name.titleize %></a>
             <% end %>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="<%= categories_path %>">All Categories</a>
         </div>
       </li>
       <!-- Search -->
