Add footer and amend review form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,5 +18,7 @@
       <%= render partial: "shared/messages" %>
       <%= yield %>
     </div>
+
+    <%= render partial: "shared/footer" %>
   </body>
 </html>
