--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -5,11 +5,11 @@
   <div class="row">
     <div class="col-md-offset-3 col-md-6">
       <div class="form-group">
-        <%= form_for ([recipe, review]) do |f| %>
         <br></br>
-        <%= f.collection_select :rating, [1, 2, 3, 4, 5], :to_i, :to_i, {:prompt => "Rate recipe:"}, class: "form-control" %> <br>
+        <%= form_for ([recipe, review]) do |f| %>
+          <%= f.collection_select :rating, [1, 2, 3, 4, 5], :to_i, :to_i, {prompt: "Rate recipe:"}, class: "form-control" %> <br>
           <%= f.label :comment, "Comments:"  %>
-          <%= f.text_area :comment, maxlength: 150, class: "form-control" %><br></br>
+          <%= f.text_area :comment, maxlength: 128, class: "form-control" %><br></br>
           <%= f.submit "Review", class: 'btn btn-primary' %>
         <% end %>
       </div>
