--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -35,7 +35,7 @@
   
   <div class="container-fluids">
     <% if @recipe.reviews.exists?  %>
-      <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipe.reviews.size, 'Review') %></small></p>
+      <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipe.reviews.size, 'Review') %> | <%= @recipe.rating_average %> / <%= pluralize(@recipe.reviews.size, 'rating') %></small></p>
       <!-- Card columns -->
       <div class="card-columns">
         <%= render partial: 'reviews/review', collection: @recipe.reviews %>
