--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,14 +1,24 @@
 <!-- /recipes/_recipe -->
 
-<!-- Card -->
-<div class="card">
-  <!--Card image-->
-  <%= link_to_image_tag(recipe) %>
+<div class="container-fluids">
+  <p class="text-center card-text"><small class="text-muted"><%= pluralize(recipes.total_count, 'Recipe') %></small></p>
+  <!-- Card columns -->
+  <div class="card-columns">
+    <!-- Card -->
+    <% recipes.each do |recipe| %>
+      <div class="card">
+        <!--Card image-->
+        <%= link_to_image_tag(recipe) %>
 
-  <!--Card body -->
-  <div class="card-body">
-    <p class="card-text"><small class="text-muted">by <%= link_to recipe.user.name.titleize, user_path(recipe.user) %></small></p>
-    <h4 class="card-title"><%= link_to_recipe_name(recipe) %></h4>
-    <p class="card-text"><%= recipe.description %></p>
-  </div> <!-- Card body -->
-</div> <!-- Card -->
+        <!--Card body -->
+        <div class="card-body">
+          <p class="card-text"><small class="text-muted">by <%= link_to recipe.user.name.titleize, user_path(recipe.user) %></small></p>
+          <h4 class="card-title"><%= link_to_recipe_name(recipe) %></h4>
+          <p class="card-text"><%= recipe.description %></p>
+        </div> <!-- Card body -->
+      </div> <!-- Card -->
+    <% end %>
+  </div> <!-- Card columns -->
+</div> <!-- Container -->
+
+<%= paginate recipes, window: 2 %>
