--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,10 +2,5 @@
 
 <%= render partial: 'shared/jumbotron', locals: { title: "Recipe Index" } %>
 
-<div class="container-fluids">
-  <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipes.count, 'Recipe') %></small></p>
-  <!-- Card columns -->
-  <div class="card-columns">
-    <%= render partial: 'recipe', collection: @recipes %>
-  </div> <!-- Card columns -->
-</div> <!-- Container -->
+<!-- Render recipes  -->
+<%= render partial: 'recipe', locals: { recipes: @recipes } %>
