--- a/app/views/recipes/search.html.erb
+++ b/app/views/recipes/search.html.erb
@@ -3,14 +3,13 @@
 <%= render partial: 'shared/jumbotron', locals: { title: "#{@recipe_name} Recipes" } %>
 
 <div class="container-fluids">
-  <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipes.count, 'Recipe') %></small></p>
-
   <% if @recipes.count == 0 %>
-    <p class="text-left">Sorry, no recipes found. Try more unspecific terms or change the search terms.</p>
+    <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipes.count, 'Recipe') %></small></p>
+    <p class="text-center">Sorry, no recipes found. Try more unspecific terms or change the search terms.</p>
   <% end %>
-  
-  <!-- Card columns -->
-  <div class="card-columns">
-    <%= render partial: 'recipe', collection: @recipes %>
-  </div> <!-- Card columns -->
 </div> <!-- Container -->
+
+<!-- Render recipes  -->
+<% if @recipes.count > 0 %>
+  <%= render partial: 'recipe', locals: { recipes: @recipes } %>
+<% end %>
