--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,5 @@
   <hr>
 </div>
 
-<div class="container-fluids">
-  <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipes.count, 'Recipe') %></small></p>
-  <!-- Card columns -->
-  <div class="card-columns">
-    <%= render partial: 'recipes/recipe', collection: @recipes %>
-  </div> <!-- Card columns -->
-</div> <!-- Container -->
+<!-- Render recipes  -->
+<%= render partial: 'recipes/recipe', locals: { recipes: @recipes } %>
