--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -2,11 +2,5 @@
 
 <%= render partial: 'shared/jumbotron', locals: { title: "Kitchen&Recipes" } %>
 
-
-<div class="container-fluids">
-  <p class="text-center card-text"><small class="text-muted"><%= pluralize(@recipes.count, 'Recipe') %></small></p>
-  <!-- Card columns -->
-  <div class="card-columns">
-    <%= render partial: 'recipes/recipe', collection: @recipes %>
-  </div> <!-- Card columns -->
-</div> <!-- Container -->
+<!-- Render recipes  -->
+<%= render partial: 'recipes/recipe', locals: { recipes: @recipes } %>
