Add event listener on the all-recipes request

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -3,4 +3,7 @@
 <%= render partial: 'shared/jumbotron', locals: { title: "Kitchen&Recipes" } %>
 
 <!-- Render recipes  -->
-<%= render partial: 'recipes/recipe', locals: { recipes: @recipes } %>
+<%#= render partial: 'recipes/recipe', locals: { recipes: @recipes } %>
+
+<button id="all-recipes">Get Recipes</button>
+<div id="ajax-container">************ DUMMY TEXT AJAX CONTAINER *************</div>
