Get json data via api_controller and remove unused codes

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -7,10 +7,10 @@
 
 <div id="ajax-container">
   <%# <button id="all-recipes">Get Recipes</button> %>
-  <%= link_to "All Recipes", recipes_path, class: "all_recipes" %>
+  <%= link_to "All Recipes", api_recipes_path, class: "all_recipes" %>
 
   <% if current_user %>
     |
-    <%= link_to "My Recipes", user_recipes_path(current_user), class: "my_recipes" %> 
+    <%= link_to "My Recipes", api_user_recipes_path(current_user), class: "my_recipes" %> 
   <% end %>
 </div>
