--- a/app/assets/javascripts/templates/recipes/index.hbs
+++ b/app/assets/javascripts/templates/recipes/index.hbs
@@ -1,10 +1,7 @@
-{{!-- /templates/recipes_index  --}}
-
-{{!-- <p class="text-center card-text"><small class="text-muted"><%= pluralize(recipes.total_count, 'Recipe') %></small>
-</p> --}}
+{{!-- /recipes/index --}}
 
 <div class="container-fluids">
-  <p class="text-center card-text"><small class="text-muted">101 Recipes</small></p>
+  <p class="text-center card-text"><small class="text-muted">{{recipes.length}} Recipes</small></p>
   <div class="card-columns">
     {{#each recipes}}
       <div class="card">
@@ -16,4 +13,5 @@
         </div>
       </div>
     {{/each}}
+  </div>
 </div>
