--- a/app/assets/javascripts/templates/recipes/index.hbs
+++ b/app/assets/javascripts/templates/recipes/index.hbs
@@ -1,4 +1,5 @@
 {{!-- /recipes/index --}}
+{{> partials/_jumbotron title = "Kitchen&Recipes"}}
 
 <div class="container-fluids">
   <p class="text-center card-text"><small class="text-muted">{{recipes.length}} Recipes</small></p>
